# polyfill3

./: .editorconfig  .flake8  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: flake8.yml  linting.yml  main.yml  tests.yml
polyfill3/: __init__.py  string.py
tests/: test_polyfill3.py
